--- a/examples/traffic/CMakeLists.txt
+++ b/examples/traffic/CMakeLists.txt
@@ -1,13 +1,13 @@
-add_executable(traffic)
-target_sources(traffic
+add_executable(traffic_test1)
+target_sources(traffic_test1
   PRIVATE
     tester.c
     trafficserz.c
 )
-target_link_libraries(traffic
+target_link_libraries(traffic_test1
   PUBLIC
     serzcore
 )
-install(TARGETS traffic
+install(TARGETS traffic_test1
   DESTINATION bin
 )
