--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,13 @@ set(serzcore_VERSION_MAJOR 1)  #version number
 set(serzcore_VERSION_MINOR 0)
 
 option(BUILD_EXAMPLES "build examples" OFF)
-set(LUA_INCLUDE_DIR "" CACHE STRING "lua header directory")
 set(LUA_LIBRARY "" CACHE STRING "lua library")
-if(${LUA_LIBRARY} EQUAL "")
-message(FATAL_ERROR "LUA_LIBRARY needed")
+set(LUA_INCLUDE_DIR "" CACHE STRING "lua header directory")
+if(NOT "${LUA_LIBRARY}" STREQUAL "")
+if("${LUA_INCLUDE_DIR}" EQUAL "")
+message(FATAL_ERROR "LUA_INCLUDE_DIR needed")
+endif()
+set(BUILD_SERZCORE_LUA ON)
 endif()
 
 add_subdirectory(src)
